<resources>
    <string name="app_name">ONAQT</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_vendor">Vendor</string>
    <string name="menu_cab">Cab</string>
    <string name="material_reco">Material</string>
    <string name="menu_about">About</string>
    <string name="menu_feedback">Feedback</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="atvantiq_networks">Atvantiq Networks Pvt Ltd.</string>
    <string name="attendance_status">Attendance Status</string>
    <string name="my_targets">Targets</string>
    <string name="projects">Projects</string>
    <string name="announcements">Announcements</string>
    <string name="view_all">View all</string>
    <string name="summary">Summary</string>
    <string name="total_days_of_month">Total Days of Month</string>
    <string name="present">Present</string>
    <string name="idle">Idle</string>
    <string name="absent">Absent</string>
    <string name="work_from_home">Work From Home</string>
    <string name="leave">Leave</string>
    <string name="project">Project</string>
    <string name="colon">:</string>
    <string name="concatText" translatable="false">%1$s %2$s</string>
    <string name="ic_completed">I&amp;C Completed</string>
    <string name="no_of_sites">No of Sites</string>
    <string name="atp_completed">ATP Completed</string>
    <string name="wfms">WFMS</string>
    <string name="wfms_dtails">Work Force Management System</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_out">Sign-Out</string>
    <string name="my_progress">My Progress</string>
    <string name="approvals">Approvals</string>
    <string name="mark_your_daily_attendance">Mark your daily Attendance</string>
    <string name="update_status_of_your_work">Update Status of your Work</string>
    <string name="monthly_progress">Monthly Progress</string>
    <string name="pending_approvals">Pending Approvals (For PM)</string>
    <string name="attendance">Attendance</string>
    <string name="add_login_activity">Add Login Activity</string>
    <string name="save">Save</string>
    <string name="pick_image">Pick image from</string>
    <string name="cant_pick_image">Can\'t pick this image.</string>
    <string-array name="source_items">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string name="camera_permission_msg">Please turn on camera permission from settings to upload image.</string>
    <string name="image_process_error">Couldn\'t process this photo. Please try again or choose another.</string>
    <string name="image_size_error">The image is too large. Please choose an image smaller than %1$d MB.</string>
    <string name="app_id" translatable="false">com.atvantiq.wfms.provider</string>
    <string name="file_creation_error">Couldn\'t prepare a file for the photo. Please try again.</string>
    <string name="camera_error">Couldn\'t capture the photo. Please try again.</string>
    <string name="gallery_error">Couldn\'t open that image. Please choose another.</string>
    <string name="warning_location_permission">"The app needs location permissions to continue the application. You can enable them in the app settings.</string>
    <string name="warning_gps_needed">Location Services Required</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="create_claim">Create Claim</string>
    <string name="add_new">Add New</string>
    <string name="my_claims">My Claims</string>
    <string name="sumitted_approved_claims">Submitted/Approved</string>
    <string name="my_approvals">My Approvals</string>
    <string name="pending_approvals_pm">Pending Approvals(For PM)</string>
    <string name="start_activity">Start Activity</string>
    <string name="start_record_vendor_data">Start/record Vendor Data</string>
    <string name="end_activity">End Activity</string>
    <string name="complete_the_activity">Complete The Activity</string>
    <string name="view_all_activities">View All Activities</string>
    <string name="vendor_completed_tasks">Vendor Completed Tasks</string>
    <string name="details">Details</string>
    <string name="tracking_details">Tracking Details</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgotYourPassword">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="enter_email_to_reset_password">Enter Email to reset password</string>
    <string name="enter_email">Enter Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="password_mismatch_error">Password and confirm password does not match</string>
    <string name="add_cab_fare">Add Cab Fare</string>
    <string name="add_material">Add Material</string>
    <string name="alert">Alert</string>
    <string name="please_wait">Please wait...</string>
    <string name="greeting_morning">Good Morning</string>
    <string name="greeting_afternoon">Good Afternoon</string>
    <string name="greeting_evening">Good Evening</string>
    <string name="greeting_night">Good Night</string>
    <string name="login_success">Login successful</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="location_permission_rationale">Location permission is required to track your attendance. Please grant the permission to continue.</string>
    <string name="permission_denied_permanently">Location permission is permanently denied. Please enable it from Settings to use attendance tracking.</string>
    <string name="retry">Retry</string>
    <string name="open_settings">Open Settings</string>
    <string name="start_day">Slide to Start Day</string>
    <string name="end_day">Slide to End Day</string>
    <string name="tab_layout_desc">Dashboard tabs</string>
    <string name="unauthorized_access">Unauthorized access</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="error_no_internet">Unable to connect. Check your internet connection and try again.</string>
    <string name="error_timeout">The server took too long to respond. Check your connection and try again.</string>
    <string name="error_unauthorized">Authentication failed. Please log in again.</string>
    <string name="error_forbidden">You don\'t have permission to do this.</string>
    <string name="error_client">We couldn\'t complete this request. Please check the details and try again.</string>
    <string name="error_server">The server ran into a problem. Please try again in a moment.</string>
    <string name="error_malformed">We received an unexpected response from the server. Please try again.</string>
    <string name="session_expired_message">Your session has expired. Please log in again.</string>
    <string name="self_assigned_work">Self Assigned Work</string>
    <string name="assign_work">Assign Work</string>
    <string name="no_attendance_data">No Attendance Data</string>
    <string name="date_not_found">Date not found</string>
    <string name="address_not_found">Address not found</string>
    <string name="work_accepted">Work Accepted</string>
    <string name="work_started">Work Started</string>
    <string name="location_not_found">Location not found</string>
    <string name="done">Done</string>
    <string name="no_image_selected">No image selected</string>
    <string name="work_ended">Work Ended</string>
    <string name="work_location">Work Location</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="select_status">Select Status</string>
    <string name="not_available">Not Available</string>
    <string name="work_assigned_successfully">Work assigned successfully</string>
    <string name="no_projects_found">No projects found</string>
    <string name="view_work_details">View Work Details</string>
    <string name="no_work_details_found">No work details found</string>
    <string name="no_data_available">No data available</string>
    <string name="work_details">Work Details</string>
    <string name="please_check_in_first">Please check-in first, Then start the work.</string>
    <string name="check_in_time">Check-in Time</string>
    <string name="check_out_time">Check-out Time</string>
    <string name="check_in_address">Check In Address</string>
    <string name="check_out_address">Check Out Address</string>
    <string name="working_hours">Working Hours</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="no_clients_available">No clients available</string>
    <string name="no_projects_available">No projects available</string>
    <string name="no_po_numbers_available">No PO numbers available</string>
    <string name="no_circles_available">No circles available</string>
    <string name="no_sites_available">No sites available</string>
    <string name="no_types_available">No types available</string>
    <string name="no_activities_available">No activities available</string>
    <string name="select_activities">Select Activities</string>
    <string name="under_development">We’re working on this feature. Available soon.</string>
    <string name="holidays">Holidays</string>
    <string name="work_off">Work Off</string>
    <string name="n_a">N/A</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_error">Location not found.</string>
    <string name="type">Type</string>
    <string name="activity">Activity</string>
    <string name="circle">Circle</string>
    <string name="select_client">Select Client</string>
    <string name="select_project">Select Project</string>
    <string name="select_po_number">Select PO Number</string>
    <string name="select_circle">Select Circle</string>
    <string name="select_site">Select Site</string>
    <string name="select_type">Select Type</string>
    <string name="select_activity">Select Activity</string>
    <string name="select_valid_option">Select valid option.</string>
    <string name="default_name">N/A</string>
    <string name="default_value">N/A</string>
    <string name="circle_label">Circle</string>
    <string name="date_of_joining_label">Date of joining</string>
    <string name="reporting_manager_label">Reporting Manager</string>
    <string name="designation_label">Designation</string>
    <string name="attendance_already_marked">Attendance is already marked for today. You don’t need to mark it again.</string>
    <string name="sites">Sites</string>
    <string name="mark_idle">Mark as IDLE</string>
    <string name="request_login_otp">Request Login OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="amount">Amount</string>
    <string name="remove_entry">Remove entry</string>
    <string name="receipt_attached">Receipt attached</string>
    <string name="tab_work">Work</string>
    <string name="tab_claims">Claims</string>
    <string name="tab_more">More</string>
    <string name="site_caption">SITE</string>
    <string name="work_status_caption">WORK STATUS</string>
    <string name="completed_label">Completed</string>
    <string name="site_code">Site Code</string>
    <string name="review_site_details">Review site details</string>
</resources>