<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_attendance" />
        <item
            android:id="@+id/nav_reimbursement"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_reimbursement" />
        <item
            android:id="@+id/nav_vendor"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_vendor" />
        <item
            android:id="@+id/nav_material_reco"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/material_reco" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_feedback" />

    </group>
</menu>