<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.atvantiq.wfms.ui.screens.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/nav_attendance"
        android:name="com.atvantiq.wfms.ui.screens.attendance.AttendanceFragment"
        android:label="@string/tab_work"
        tools:layout="@layout/fragment_attendance" />
    <fragment
        android:id="@+id/nav_reimbursement"
        android:name="com.atvantiq.wfms.ui.screens.reimbursement.ReimbursementFragment"
        android:label="@string/tab_claims"
        tools:layout="@layout/fragment_reimbursement" />
    <fragment
        android:id="@+id/nav_sites"
        android:name="com.atvantiq.wfms.ui.screens.admin.ui.site.SitesFragment"
        android:label="@string/sites"
        tools:layout="@layout/fragment_sites" />
    <fragment
        android:id="@+id/nav_approvals"
        android:name="com.atvantiq.wfms.ui.screens.admin.ui.approvals.ApprovalsFragment"
        android:label="@string/approvals"
        tools:layout="@layout/fragment_approvals" />
    <fragment
        android:id="@+id/nav_more"
        android:name="com.atvantiq.wfms.ui.screens.more.MoreFragment"
        android:label="@string/tab_more"
        tools:layout="@layout/fragment_more" />
</navigation>