<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="locationString"
            type="String" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_pull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ImageView>

        <TextView
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="start"
            android:textStyle="bold"
            android:text="@string/request_login_otp"
            style="@style/CustomLargeDarkTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <TextView
            style="@style/CustomMediumDarkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/enter_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/CustomEditRegularStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/enter_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <com.atvantiq.wfms.widgets.GradientButton
            android:id="@+id/btn_done"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/send_otp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="@style/CustomRedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/cancel" />

    </LinearLayout>
</layout>