<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_pull"></ImageView>

        <TextView
            style="@style/CustomLargeDarkTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/mark_idle"
            android:textStyle="bold"></TextView>


        <TextView
            style="@style/CustomMediumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/enter_remarks"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/remarksEditText"
            style="@style/CustomEditRegularStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="top|start"
            android:hint="@string/enter_remarks"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="2"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_done"
                style="@style/CustomPrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginStart="@dimen/margin"
                android:id="@+id/btn_cancel"
                style="@style/CustomRedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>
</layout>